[package]
name = "merkle-tree-accumulator"
version = "0.2.0"
description = "Pure Rust implementation of a Merkle tree accumulator"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
repository = "https://github.com/kobby-pentangeli/merkle-tree-accumulator"
license = "MIT"
edition = "2018"
keywords = ["merkle", "accumulator", "webassembly"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.4.3"
near-sdk = "3.1.0"
thiserror = "1.0.29"
tiny-keccak = { version = "2.0", features = ["sha3"] }
rlp = "0.5.1"
safe-transmute = "0.11.2"