[package]
name = "merkle-tree-accumulator"
version = "0.3.0"
description = "Simple Merkle tree accumulator"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
repository = "https://github.com/kobby-pentangeli/merkle-tree-accumulator"
license = "MIT"
edition = "2024"
rust-version = "1.85"
keywords = ["merkle", "accumulator", "cryptography", "zero-knowledge"]
categories = ["cryptography", "data-structures", "no-std"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
bincode = "1.3"
thiserror = "2"
digest = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
lru = "0.16"

[features]
default = ["std"]
std = ["serde/std", "digest/std", "sha3/std"]
